# turboquant-mlx

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: implementation-plan.md  study-notes.md
scripts/: run_benchmarks.sh
tests/: test_calibration_cache.py  test_generation_smoke.py  test_primitives.py  test_quantizer_and_cache.py  test_reporting_helpers.py  test_seed.py  test_validation_suite.py
turboquant_mlx/: __init__.py  _charts.py  _seed.py  attention.py  cache.py  calibration.py  codebooks.py  config.py  generate.py  llama_adapter.py  load.py  longbench.py  needle.py  packing.py  qa_eval.py  quantizer.py  reporting.py  rotation.py  teacher_forcing.py
